app/components/common/BetaTag.module.css
.tag {
    top: 40px;
    right: -50px;
    position: fixed;
    z-index: 99999;
    transform: rotate(45deg);

    background: var(--color-blue-600);
    color: #fff;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 0.5px;
    pointer-events: none;
    width: 200px;
    padding: 6px 0;
    font-size: 12px;
    font-weight: 700;

    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
}

